# AITestDrive

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
docker/: entrypoint.sh
local/: .be.env.example  .env.example  .ui.env.example
requests/: example_requests.http
src/aitestdrive/: main.py
src/aitestdrive/common/: async_locks.py  config.py  constants.py  default_config.py  logging.py  models.py
src/aitestdrive/controller/: __init__.py  app.py  chat.py  document.py  version.py
src/aitestdrive/di/: factories.py  singletons.py
src/aitestdrive/persistence/: qdrant.py
src/aitestdrive/service/: chat.py  document.py
src/aitestdrive/service/langchain/: prompts.py
src/aitestdrive_ui/: main.py
src/aitestdrive_ui/common/: config.py  constants.py  default_config.py  logging.py
src/aitestdrive_ui/controller/: app.py
src/aitestdrive_ui/resources/static/: app.js  style.css
src/aitestdrive_ui/resources/templates/: index.html
